--- a/my_django_test/dogs/templates/dogs/add.html
+++ b/my_django_test/dogs/templates/dogs/add.html
@@ -2,32 +2,32 @@
 
 {% block content %}
 
-<h3>Add a dog to the database:</h3>
+<h3 class="my-5">Add a dog to the database:</h3>
 
-<div class="container">
+<div class="container d-flex justify-content-center"  >
     <form action="" method="POST">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="form-group" >
             <label for="name">Name:</label>
-            <input id="name" name="name" type="text" class="form-control">
+            <input id="name" name="name"  type="text" class="form-control">
         </div>
                 <div class="form-group">
             <label for="age">Age:</label>
-            <input id="age" name="age" type="number" class="form-control">
+            <input id="age" name="age"   type="number" class="form-control">
         </div>
         <div class="form-group">
             <label for="color">Color:</label>
-            <input id="color" name="color" type="text" class="form-control">
+            <input id="color"    name="color" type="text" class="form-control">
         </div>
         <div class="form-group">
             <label for="breed">Breed:</label>
-            <input id="breed" name="breed" type="text" class="form-control">
+            <input id="breed" name="breed"   type="text" class="form-control">
         </div>
         <div class="mt-2 form-group">
             <label for="isBiting">Biting:</label>
             <input type="checkbox" id="isBiting" name="isBiting" >
         </div>
-        <div class="mt-2 form-group">
+        <div class="mt-3 form-group">
             <label for="sex">Sex:</label>
             <select name="sex" id="sex">
                 <option value="M">Male</option>
