--- a/my_django_test/templates/base.html
+++ b/my_django_test/templates/base.html
@@ -57,7 +57,14 @@
   </div>
 </nav>
 <h1 class="text-center">Welcome to the Webpage</h1>
-
+{% if user.is_authenticated %}
+    <p>You are logged in</p>
+    <p>Welcome {{user.username}}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <p>You are not logged in!</p>
+    <a href="{% url 'login' %}">Login</a>
+{% endif %}
 {% block content %}
 
 
