--- a/my_django_test/dog_views/templates/dog_views/doggo_form.html
+++ b/my_django_test/dog_views/templates/dog_views/doggo_form.html
@@ -6,13 +6,21 @@
     <title>Add a dog</title>
 </head>
 <body>
+
 {% block content %}
+<h3 class="text-center">Add a new dog</h3>
 <div class="container d-flex justify-content-center"  >
 <form method="POST">
   {% csrf_token %}
-  {{ form.as_p }}
+     <table>
+         {% for field in form %}
+        <tr>
+           <td> {{ field.label_tag }}</td><td> {{ field }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 
-  <input type="submit">
+  <input class="mt-3 form-control btn btn-secondary" type="submit">
 </form>
 </div>
 
