--- a/my_django_test/dog_views/templates/dog_views/owner_form.html
+++ b/my_django_test/dog_views/templates/dog_views/owner_form.html
@@ -7,12 +7,18 @@
 </head>
 <body>
 {% block content %}
+<h3 class="text-center"> Add a new owner</h3>
 <div class="container d-flex justify-content-center"  >
 <form method="POST">
   {% csrf_token %}
-  {{ form.as_p }}
-
-  <input type="submit">
+    <table>
+         {% for field in form %}
+        <tr>
+           <td> {{ field.label_tag }}</td><td> {{ field }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+  <input class=" mt-3 form-control btn btn-secondary" type="submit">
 </form>
 </div>
 
