--- a/my_django_test/dog_views/templates/dog_views/owner_update_form.html
+++ b/my_django_test/dog_views/templates/dog_views/owner_update_form.html
@@ -8,15 +8,21 @@
 <body>
 
 {% block content %}
+<h3 class="text-center"> Modify owner data</h3>
 <div class="container d-flex justify-content-center"  >
 <form method="POST">
-    {% csrf_token %}
-        {{ owner }}
-
-  <input type="submit">
-
+  {% csrf_token %}
+    <table>
+         {% for field in form %}
+        <tr>
+           <td> {{ field.label_tag }}</td><td> {{ field }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+  <input class=" mt-3 form-control btn btn-secondary" type="submit">
 </form>
 </div>
+
 {% endblock %}
 
 
